[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Buble.gd" type="Script" id=1]
[ext_resource path="res://assets/explosion.png" type="Texture" id=2]
[ext_resource path="res://samples/audio/pop.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/buble.png" type="Texture" id=4]
[ext_resource path="res://samples/audio/oops.wav" type="AudioStream" id=5]


[sub_resource type="PhysicsMaterial" id=1]
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[sub_resource type="Animation" id=3]
resource_name = "pop"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Explosion:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 3, 3 ) ]
}

[node name="Buble" type="RigidBody2D"]
input_pickable = true
mass = 0.0204082
physics_material_override = SubResource( 1 )
gravity_scale = 0.3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Buble" type="Sprite" parent="."]
texture = ExtResource( 4 )
region_rect = Rect2( 100, 150, 100, 150 )

[node name="Art" type="Sprite" parent="Buble"]
scale = Vector2( 0.6, 0.6 )

[node name="AudioPop" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="AudioSay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = 1.0

[node name="AudioOops" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pop = SubResource( 3 )

[node name="Explosion" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
[connection signal="input_event" from="." to="." method="_on_Baloon_input_event"]
[connection signal="finished" from="AudioPop" to="." method="_on_AudioPop_finished"]
[connection signal="finished" from="AudioSay" to="." method="_on_AudioSay_finished"]
